--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/carmodel"/>
 	<classpathentry kind="lib" path="/carmodel/lib/gson-1.7.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Guava 11.0"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
